[project]
name = "diffaid-patches"
description = "A ComfyUI custom node pack implementing Diff-Aid-inspired inference-time text-conditioning patches for Flux and SDXL models."
version = "1.0.2"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/xmarre/ComfyUI-DiffAid-Patches"
"Bug Tracker" = "https://github.com/xmarre/ComfyUI-DiffAid-Patches/issues"

[tool.comfy]
PublisherId = "xmarre"
DisplayName = "ComfyUI-DiffAid-Patches"
Icon = ""
includes = []
# Requires a ComfyUI build with model patch replacement hooks, attention patch hooks,
# and model function wrappers. The exact minimum ComfyUI version has not been pinned.
